ontol/ontol-compiler/test-cases/error/map/type_mismatch_simple.on
def foo ()
def bar ()
rel {foo} 'prop': text
rel {bar} 'prop': i64
map(
    foo(
        'prop': x
    ),
    bar(
        'prop':
            x // ERROR type mismatch: expected `ontol.i64`, found `ontol.text`
    )
)
